# bitcal-tts

./: .gitignore  ABSTRACT.md  CONTRIBUTING.md  LICENSE  PAPER_DRAFT.md  PROJECT_PLAN.md  PYPI_QUICKSTART.md  README.md  RELATED_WORK.md  RELEASING.md  REPRODUCIBILITY.md  SECURITY.md  TOPIC_DECISION.md  arxiv_template.tex  colab_experiment.ipynb  pyproject.toml  references.bib  requirements.txt
.github/workflows/: ci.yml  publish-pypi.yml
benchmarks/: __init__.py  example_tasks.jsonl  gsm8k_loader.py  load_tasks.py
configs/: default.yaml  experiment_gsm8k_gemma2_2b.yaml  experiment_gsm8k_minimal.yaml
docs/: MINIMAL_EXPERIMENT.md
results/: README.md
results/processed/: summary.csv
results/processed/7b/: summary.csv
results/raw/: exp_Qwen_Qwen2.5-14B-Instruct_1775404913.jsonl  exp_Qwen_Qwen2.5-14B-Instruct_1775412134.jsonl  exp_Qwen_Qwen2.5-3B-Instruct_1775333863.jsonl  exp_Qwen_Qwen2.5-3B-Instruct_1775333944.jsonl  exp_Qwen_Qwen2.5-3B-Instruct_1775336876.jsonl  exp_Qwen_Qwen2.5-3B-Instruct_1775337983.jsonl  exp_Qwen_Qwen2.5-3B-Instruct_1775349259.jsonl  exp_Qwen_Qwen2.5-3B-Instruct_1775349311.jsonl  exp_Qwen_Qwen2.5-3B-Instruct_1775356300.jsonl  exp_Qwen_Qwen2.5-3B-Instruct_1775368229.jsonl  exp_Qwen_Qwen2.5-7B-Instruct_1775428350.jsonl
scripts/: analyze_results.py  paper_figures.py  run_baseline_demo.py  run_experiment.py
src/bitcal_tts/: __init__.py  __main__.py  cli.py  config.py  demo.py  experiment.py
src/bitcal_tts/calibrator/: __init__.py  bit_aware.py
tests/: test_benchmarks.py  test_calibrator.py  test_cli.py  test_config.py  test_demo_config.py  test_experiment.py  test_gsm8k_benchmark.py  test_hf_generate.py  test_hf_inference.py  test_hf_optional.py  test_main_module.py  test_policy.py  test_runner_metrics.py  test_signals.py
(+14 files in other folders)
