[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcal-tts"
version = "0.1.0"
description = "Bit-calibrated test-time scaling for quantized reasoning models"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "BitCal-TTS contributors" }]
keywords = ["llm", "quantization", "reasoning", "test-time compute", "calibration", "pytorch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "torch>=2.1.0",
  "numpy>=1.24.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "build>=1.2.0", "twine>=5.0.0"]
research = [
  "transformers>=4.38.0",
  "accelerate>=0.27.0",
  "pandas>=2.0.0",
  "scipy>=1.11.0",
  "datasets>=2.18.0",
  "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/Saibabu7770/bitcal-tts"
Repository = "https://github.com/Saibabu7770/bitcal-tts"
Issues = "https://github.com/Saibabu7770/bitcal-tts/issues"

[project.scripts]
bitcal-tts = "bitcal_tts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = [
  "--cov=bitcal_tts",
  "--cov-report=term-missing",
  "--cov-fail-under=90",
]
